k8s/tezblock/delphinet/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tezblock-delphinet-frontend
  namespace: tezblock
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - tezblock-delphinet.prod.gke.papers.tech
        - delphinet.tezblock.io
      secretName: tezblock-delphinet-prod-tls  
  rules:
    - host: tezblock-delphinet.prod.gke.papers.tech
      http:
        paths:
          - backend:
              serviceName: tezblock-delphinet-frontend
              servicePort: 80
    - host: delphinet.tezblock.io
      http:
        paths:
          - backend:
              serviceName: tezblock-delphinet-frontend
              servicePort: 80
